--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
        </nav>
 
        <!-- banner -->
+        
+       <div class="mb-5">
+        <div
+            class="hero min-h-screen rounded-xl"
+            style="background-image: url(./images/banner.png);">
+            <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+            <div class="hero-content text-neutral-content text-center">
+                <div class="max-w-md">
+                <h1 class="mb-5 text-5xl font-bold">We Provide Effective Legal Solutions</h1>
+                <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <input type="text" placeholder="Type here" class="input min-w-72" />
+                <button class="btn bg-btn-primary text-white border-none">Get Started</button>
+                </div>
+            </div>
+            </div>
+      </div>
+
+
+
+
 
 
     </header>
