--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                             </div>
                           </div>
                     </div>
-                <h1 class="mb-5 text-2xl font-bold text-white ">Awlad Hossain</h1>
-                <p class="mb-5 text-lg">UIX Designer</p>
+                <h1 class="mb-5 text-2xl font-bold text-white ">Shahriar Naiem</h1>
+                <p class="mb-5 text-lg">UI XI Designer</p>
                 <p class="mb-5 text-lg">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin <br> literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney <br> College in Virginia, looked up one of the more obscure Latin words, consectetur.
                 </p>
 
@@ -245,8 +245,8 @@
                                 </div>
                               </div>
                         </div>
-                    <h1 class="mb-5 text-2xl font-bold text-white ">Awlad Hossain</h1>
-                    <p class="mb-5 text-lg">UIX Designer</p>
+                    <h1 class="mb-5 text-2xl font-bold text-white ">Abu Jakariya</h1>
+                    <p class="mb-5 text-lg">Frontend Developer</p>
                     <p class="mb-5 text-lg">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin <br> literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney <br> College in Virginia, looked up one of the more obscure Latin words, consectetur.
                     </p>
     
@@ -269,8 +269,8 @@
                                     </div>
                                   </div>
                             </div>
-                        <h1 class="mb-5 text-2xl font-bold text-white ">Awlad Hossain</h1>
-                        <p class="mb-5 text-lg">UIX Designer</p>
+                        <h1 class="mb-5 text-2xl font-bold text-white ">Tanvir Hossain</h1>
+                        <p class="mb-5 text-lg">Frontend Developer</p>
                         <p class="mb-5 text-lg">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin <br> literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney <br> College in Virginia, looked up one of the more obscure Latin words, consectetur.
                         </p>
         
